@@ -18,6 +18,22 @@ defmodule Gitlab do
     get(url)
   end
 
+  def commits(query_options = %{}) do
+    api_base_url = Keyword.get(Application.get_env(:slab, :gitlab), :api_base_url)
+    url = api_base_url <> "/repository/commits?" <> URI.encode_query(query_options)
+    Logger.info("commits url - #{url}")
+
+    get(url)
+  end
+
+  def merge_requests(commit_id) do
+    api_base_url = Keyword.get(Application.get_env(:slab, :gitlab), :api_base_url)
+    url = api_base_url <> "/repository/commits/#{commit_id}/merge_requests"
+    Logger.info("merge requests url - #{url}")
+
+    get(url)
+  end
+
   defp get(url, default_body \\ []) do
     timeout = Keyword.get(Application.get_env(:slab, :gitlab), :timeout_ms)
     access_token = Keyword.get(Application.get_env(:slab, :gitlab), :private_token)
