@@ -11,3 +11,4 @@ The format is based on [[https://keepachangelog.com/en/1.0.0/][Keep a Changelog]
     - poor link purling
     - issues 옵션으로 gitlab issue를 조회할 수 있다
     - issues 조회 시 20개가 넘어가면 결과물에서 pagination 안내
+    - commits-without-mr 커맨드로 merge request 없이 master 브랜치에 머지한 커밋을 조회할 수 있다
